# reproducible-ml-workflow

./: .gitignore  BUILDING-REPRODUCIBLE-WORKFLOWS.md  Dockerfile  README.md  experiment-versioning-workflow.md  pyproject.toml
.github/workflows/: build-image.yml  build-wheel.yml
examples/: sample.json
scripts/: run.sh  submit.py
src/mypkg/: entry.py  version_utils.py
