[project]
name = "mypkg"
version = "0.1.0"
description = "Reproducible ML workflow demo: every run is bound to a specific git commit."
requires-python = ">=3.10"
dependencies = [
    "numpy==2.1.2",
    "scikit-learn==1.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypkg"]

# version.py is gitignored (CI generates it per-build) — declare it as a
# build artifact so hatch includes it in the wheel anyway.
[tool.hatch.build]
artifacts = ["src/mypkg/version.py"]
